# ansible-role-tripleo-rabbitmq

./: .gitreview  README.md  ansible.cfg  setup.cfg
meta/: main.yml
